// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Contract Tests: API Response Shapes > GET /v1/health > should return expected health response shape 1`] = `
{
  "build": Any<String>,
  "environment": "test",
  "status": "healthy",
  "timestamp": Any<String>,
  "uptime": Any<Number>,
  "version": "0.1.0-test",
}
`;

exports[`Contract Tests: API Response Shapes > GET /v1/packs/:slug - 404 Response > should return expected 404 error response shape 1`] = `
{
  "error": {
    "code": "NOT_FOUND",
    "message": "Route not found",
  },
  "request_id": Any<String>,
}
`;

exports[`Expanded Endpoint Snapshots (T2.4) > GET /v1/categories > snapshot: categories list response shape 1`] = `
{
  "data": [
    {
      "color": "#FF44FF",
      "construct_count": 5,
      "description": "GTM and campaigns",
      "id": "marketing",
      "label": "Marketing",
      "slug": "marketing",
    },
    {
      "color": "#44FF88",
      "construct_count": 10,
      "description": "Coding and testing",
      "id": "development",
      "label": "Development",
      "slug": "development",
    },
  ],
  "request_id": Any<String>,
}
`;

exports[`Expanded Endpoint Snapshots (T2.4) > GET /v1/categories/:slug > snapshot: category 404 response shape 1`] = `
{
  "error": {
    "code": "NOT_FOUND",
    "details": {
      "resource": "Category",
    },
    "message": "Category not found",
  },
  "request_id": Any<String>,
}
`;

exports[`Expanded Endpoint Snapshots (T2.4) > GET /v1/categories/:slug > snapshot: category detail response shape 1`] = `
{
  "data": {
    "color": "#FF44FF",
    "construct_count": 5,
    "description": "GTM and campaigns",
    "id": "marketing",
    "label": "Marketing",
    "slug": "marketing",
  },
  "request_id": Any<String>,
}
`;

exports[`Expanded Endpoint Snapshots (T2.4) > GET /v1/constructs (empty result) > snapshot: constructs list empty response shape 1`] = `
{
  "data": [],
  "pagination": {
    "page": Any<Number>,
    "per_page": Any<Number>,
    "total": Any<Number>,
    "total_pages": Any<Number>,
  },
  "request_id": Any<String>,
}
`;

exports[`Expanded Endpoint Snapshots (T2.4) > GET /v1/constructs/:slug - 404 > snapshot: construct 404 response shape 1`] = `
{
  "error": {
    "code": "NOT_FOUND",
    "details": {
      "resource": "Construct",
    },
    "message": "Construct not found",
  },
  "request_id": Any<String>,
}
`;

exports[`Expanded Endpoint Snapshots (T2.4) > GET /v1/health/live > snapshot: health live response shape 1`] = `
{
  "startup_time": Any<String>,
  "status": "alive",
  "timestamp": Any<String>,
  "uptime_seconds": Any<Number>,
}
`;

exports[`Expanded Endpoint Snapshots (T2.4) > GET /v1/health/metrics > snapshot: health metrics response shape 1`] = `
{
  "memory": {
    "external_mb": Any<Number>,
    "heap_total_mb": Any<Number>,
    "heap_used_mb": Any<Number>,
    "rss_mb": Any<Number>,
  },
  "process": {
    "arch": Any<String>,
    "node_version": Any<String>,
    "pid": Any<Number>,
    "platform": Any<String>,
  },
  "timestamp": Any<String>,
  "uptime_seconds": Any<Number>,
  "version": Any<String>,
}
`;

exports[`Expanded Endpoint Snapshots (T2.4) > GET /v1/health/ready > snapshot: health ready response shape 1`] = `
{
  "checks": Any<Array>,
  "status": StringMatching /\\^\\(healthy\\|degraded\\|unhealthy\\)\\$/,
  "timestamp": Any<String>,
  "version": "0.1.0-test",
}
`;

exports[`Production Response Snapshots > documents expected /v1/constructs response 1`] = `
{
  "data": [
    {
      "createdAt": "2026-01-15T00:00:00.000Z",
      "description": "Behavioral pattern recognition through patient observation and insightful probing. The keeper builds the hive — the colony thrives inside.",
      "icon": "eye",
      "id": "uuid-example",
      "maturity": "stable",
      "name": "Beehive",
      "slug": "observer",
      "status": "published",
      "updatedAt": "2026-01-20T00:00:00.000Z",
    },
  ],
  "pagination": {
    "limit": 20,
    "page": 1,
    "total": 4,
    "totalPages": 1,
  },
}
`;

exports[`Production Response Snapshots > documents expected /v1/health response 1`] = `
{
  "build": "2026-02-01T00:00:00.000Z",
  "environment": "production",
  "status": "healthy",
  "timestamp": "2026-02-02T00:00:00.000Z",
  "uptime": 3600,
  "version": "0.1.0",
}
`;

exports[`Production Response Snapshots > documents expected 404 error response 1`] = `
{
  "error": {
    "code": "NOT_FOUND",
    "message": "Pack not found",
  },
}
`;
